# ai-sdgs-backend

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  main.py  pyproject.toml  pytest.ini  seed_sdg.py
ai_result/: result_ADI PRANOTO_1_6e98ad21-c572-4d30-ae9c-ab2b9642d63c.json  result_ADI PRANOTO_1_ac5213ef-b51a-442f-a1f4-4b25c5fcdd1d.json  result_TOR-PM_4e68537e-7750-471f-82f8-ec72f0454c1a.json  result_TOR-PM_9ec97da2-4870-4264-9886-d6b476eaedf7.json  result_TOR-PM_c22c07f9-e5bd-4ce2-95c6-eac21f1f3d2c.json
app/core/: input_doc.py  retrieval.py
app/database/: inmemory_vdb_service.py  supabase_service.py  vdb_utils.py
app/infrastructure/: embedding_service.py  llm_agent_service.py  prompt_agent.py
app/utils/: text_processing.py
tests/: conftest.py  test_core.py  test_database.py  test_infrastructure.py  test_unit.py
tests/fixtures/: database.py  generate_input.py  infrastructure.py
tests/mocks/: ACHMAD KAUTSAR_1.md  mock_chunks_retrieval_result.txt  mock_extracted_TOR-PM.json  mock_metadata_retrieval_result.txt  mock_retrieval_result.txt  retrieval_result.txt
tests/mocks/mock_faiss_index/: index.faiss  index.pkl
